--- a/resume/Резюме Рожкина.html
+++ b/resume/Резюме Рожкина.html
@@ -5,100 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Рожкина Ксения - Резюме</title>
     <style>
-        body {
-            font-family: sans-serif;
-            line-height: 1.6;
-            margin: 20px;
+        tr, th, td, col {
+            border: 1px solid;
+
         }
-
-        header, footer {
-            background-color: #f4f4f4;
-            padding: 10px;
-            text-align: center;
-            margin-bottom: 20px;
-        }
-
-        h1, h2, h3 {
-            color: #333;
-        }
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-bottom: 20px;
-        }
-
-        th, td {
-            border: 1px solid #ddd;
-            padding: 8px;
-            text-align: left;
-        }
-
-        th {
-            background-color: #f2f2f2;
-        }
-
-        img {
-            max-width: 150px;
-            height: auto;
-            border-radius: 50%;
-            margin-bottom: 15px;
-        }
-
-        ul, ol {
-            margin-left: 20px;
-        }
-
-        hr {
-            border: 0;
-            height: 1px;
-            background: #ccc;
-            margin: 20px 0;
-        }
-
-        a {
-            color: #007bff;
-            text-decoration: none;
-        }
-
-            a:hover {
-                text-decoration: underline;
-            }
-
-        .section {
-            margin-bottom: 30px;
-            padding-bottom: 20px;
-            border-bottom: 1px solid #eee;
+        h2 {
+            color: purple;
         }
     </style>
 </head>
 <body>
 
     <header>
+        <hr />
         <img src="https://i.pinimg.com/originals/38/a9/46/38a9463f2fd19cd355f0c65849291995.jpg" alt="Ваше фото">
         <h1>Рожкина Ксения Сергеевна</h1>
         <h2>-</h2>
     </header>
 
     <main>
-        <div class="section">
+        <div>
             <h2>Контактная информация</h2>
+            <hr />
             <dl>
                 <dt>Дата рожения:</dt>
                 <dd>12.07.2005</dd>
                 <dt>Местоположение:</dt>
                 <dd>Москва, Россия</dd>
-                <dt>Телефон:</dt>
-                <dd>+7 (XXX) XXX-XX-XX</dd>
-                <dt>Email:</dt>
-                <dd>ksusha_rks05@mail.ru</dd>
+                <dd><a href="tel:+78005553535"> Номер телефона</a></dd>
+                <dd><a href="mailto:ksusha_rks05@mail.ru"> Почта</a></dd>
                 <dt>Портфолио/GitHub:</dt>
                 <dd><a href="#">https://github.com/KsushaRKS05</a></dd>
             </dl>
         </div>
 
-        <div class="section">
+        <div>
             <h2>Образование</h2>
+            <hr />
             <table>
                 <colgroup>
                     <col style="width: 25%;">
@@ -122,8 +65,9 @@
             </table>
         </div>
 
-        <div class="section">
+        <div>
             <h2>Опыт работы</h2>
+            <hr />
             <table>
                 <colgroup>
                     <col style="width: 20%;">
@@ -151,8 +95,9 @@
             </table>
         </div>
 
-        <div class="section">
+        <div>
             <h2>Навыки</h2>
+            <hr />
             <h3>Hard Skills</h3>
             <ul>
                 <li>Языки программирования: Python, C++, SQL</li>
@@ -169,8 +114,9 @@
             </ul>
         </div>
 
-        <div class="section">
+        <div>
             <h2>Дополнительная информация</h2>
+            <hr />
             <ul>
                 <li>Курс: «Наставник в IT: как давать обратную связь, мотивировать и решать конфликты»</li>
                 <li>Знание английского языка</li>
@@ -178,10 +124,5 @@
         </div>
 
     </main>
-
-    <footer>
-        <p>&copy; 2025 Рожкина Ксения. Все права защищены.</p>
-    </footer>
-
 </body>
 </html>
